--- a/dashboard/config/locales/scripts.en.yml
+++ b/dashboard/config/locales/scripts.en.yml
@@ -15055,7 +15055,7 @@ en:
           lessons: {}
           lesson_groups: {}
           name: melissambcc
-          title: Course C (2nd-3rd Grade)
+          title: 2nd Grade- Maker with micro:bit
           description_audience: ''
           description_short: ''
           description: "#### This module covers the concepts and skills that are in the micro:bit beginner track.\n\n#### **You will:**\n* #### Code using events with Code.org.\n* #### Explore an unplugged coding lesson. \n\n\n#### **Suggested Time:** 30 minutes\n\n\n"
@@ -15518,24 +15518,22 @@ en:
           description_audience: ''
           description_short: Learn how to effectively and ethically use generative AI chatbots in the writing and research process in these standalone lessons.
           description: |-
-            This unit consists of two standalone lessons -- one about writing with AI and one about researching with AI. You may teach one or both of them. Both are meant to be used in Humanities classes, to help demystify ethical and effective use of chatbots in Humanities subject areas. Both lessons encourage students to explore the uses of these rapidly growing technologies and reflect on when and where to use them. If you wish to teach one but not the other, [click here to learn about hiding lessons](https://support.code.org/hc/en-us/articles/115001479372-How-can-I-hide-certain-units-or-lessons-from-my-students)
+            This unit consists of two standalone lessons -- one about writing with AI and one about researching with AI. You may teach one or both of them. Both are meant to be used in humanities classes, to help demystify ethical and effective use of chatbots in humanities subject areas. Both lessons encourage students to explore the uses of these rapidly growing technologies and reflect on when and where to use them. If you wish to teach one but not the other, [**click here to learn about hiding lessons**](https://support.code.org/hc/en-us/articles/115001479372-How-can-I-hide-certain-units-or-lessons-from-my-students)
 
-            In the Writing Process Lesson students will:
-            * Prompt a chatbot to help brainstorm, draft or revise an essay.
-            * Discuss with your classmates which of these uses supported your learning, versus detracted from it, and why.
-            * Build Values for using AI with your class.
+            In the Writing Process lesson, students will:
+            * Assess the ethical implications of using AI for writing assistance, considering issues such as originality, intellectual integrity, and the balance between human creativity and AI assistance
+            * Craft effective prompts to interact with LLMs to generate useful and relevant responses for various writing tasks
 
-            In the Research Process Lesson, students will:
+            In the Research Process lesson, students will:
             * Use a chatbot and a search engine to research and verify information.
             * Learn how to more effectively prompt a chatbot in the process.
             * Discuss what kind of research AI is helpful for.
 
-            **Support for teachers**: You can learn more about bringing AI lessons to your classroom through our [AI 101 for Teachers](https://code.org/ai/pl/101) series. AI 101 for Teachers is a free, foundational online professional learning series for any teacher and educator interested in the groundbreaking world of artificial intelligence (AI) and its transformative potential in education.
+            **Support for teachers**: You can learn more about bringing AI lessons to your classroom through our [**AI 101 for Teachers**](https://code.org/ai/pl/101) series. AI 101 for Teachers is a free, foundational online professional learning series for any teacher and educator interested in the groundbreaking world of artificial intelligence (AI) and its transformative potential in education.
           student_description: |-
-            In the Writing Process Lesson you will:
-            * Prompt a chatbot to help brainstorm, draft or revise an essay.
-            * Discuss with your classmates which of these uses supported your learning, versus detracted from it, and why.
-            * Build Values for using AI with your class.
+            In the Writing Process lesson, you will:
+            * Assess the ethical implications of using AI for writing assistance, considering issues such as originality, intellectual integrity, and the balance between human creativity and AI assistance
+            * Craft effective prompts to interact with LLMs to generate useful and relevant responses for various writing tasks
 
             In the Research Process Lesson, you will:
             * Use a chatbot and a search engine to research and verify information.
@@ -16874,7 +16872,7 @@ en:
           title: Grade 2 - Maker with micro:bit
           description_audience: ''
           description_short: ''
-          description: ''
+          description: "Bring hands-on technology learning to Computer Science with our Maker course, designed around the micro:bit physical computing device. This course bridges the gap between digital and physical worlds, enabling students to transfer their computer programs into real-world applications with the micro:bit. Students will learn fundamental coding principles such as sequencing, loops, conditional logic, and event handling, and they will gain practical experience in how hardware and software can work together.\n\nNot sure where to begin? Start with the first micro:bit project pathway and work your way through all three pathways, ordered by increasing difficulty. Each of the three pathways has two components. First, students will develop their coding knowledge by completing skill-building lessons from Code.org's CS Fundamentals course. Then, students will go to the micro:bit platform to code their physical computing projects. \n\n**New to micro:bit?** \n\nGet started with our [self-paced Professional Learning](https://studio.code.org/courses/microbitmakermodule-2024). \n\nThis self-paced course covers the following topics: \n- How to use the Code.org curriculum \n- How to setup a classroom on Code.org \n- How to use micro:bits \n- How to use the “Meet your micro:bit” project\n- How to setup a classroom on micro:bit\n- How to assess student learning \n"
           student_description: ''
         grade3-maker-2024:
           lessons: {}
@@ -16889,7 +16887,7 @@ en:
           title: Grade 3 - Maker with micro:bit
           description_audience: ''
           description_short: ''
-          description: ''
+          description: "Bring hands-on technology learning to Computer Science with our Maker course, designed around the micro:bit physical computing device. This course bridges the gap between digital and physical worlds, enabling students to transfer their computer programs into real-world applications with the micro:bit. Students will learn fundamental coding principles such as sequencing, loops, conditional logic, and event handling, and they will gain practical experience in how hardware and software can work together.\n\nNot sure where to begin? Start with the first micro:bit project pathway and work your way through all three pathways, ordered by increasing difficulty. Each of the three pathways has two components. First, students will develop their coding knowledge by completing skill-building lessons from Code.org’s CS Fundamentals course. Then, students will go to the micro:bit platform to code their physical computing projects.\n\n**New to micro:bit?** \n\nGet started with our [self-paced Professional Learning](https://studio.code.org/courses/microbitmakermodule-2024). \n\nThis self-paced course covers the following topics: \n- How to use the Code.org curriculum \n- How to setup a classroom on Code.org \n- How to use micro:bits \n- How to use the “Meet your micro:bit” project\n- How to setup a classroom on micro:bit\n- How to assess student learning \n"
           student_description: ''
         grade4-maker-2024:
           lessons: {}
@@ -16904,7 +16902,7 @@ en:
           title: Grade 4 - Maker with micro:bit
           description_audience: ''
           description_short: ''
-          description: ''
+          description: "Bring hands-on technology learning to Computer Science with our Maker course, designed around the micro:bit physical computing device. This course bridges the gap between digital and physical worlds, enabling students to transfer their computer programs into real-world applications with the micro:bit. Students will learn fundamental coding principles such as sequencing, loops, conditional logic, and event handling, and they will gain practical experience in how hardware and software can work together.\n\nNot sure where to begin? Start with the first micro:bit project pathway and work your way through all three pathways, ordered by increasing difficulty. Each of the three pathways has two components. First, students will develop their coding knowledge by completing skill-building lessons from Code.org’s CS Fundamentals course. Then, students will go to the micro:bit platform to code their physical computing projects.\n\n**New to micro:bit?** \n\nGet started with our [self-paced Professional Learning](https://studio.code.org/courses/microbitmakermodule-2024). \n\nThis self-paced course covers the following topics: \n- How to use the Code.org curriculum \n- How to setup a classroom on Code.org \n- How to use micro:bits \n- How to use the “Meet your micro:bit” project\n- How to setup a classroom on micro:bit\n- How to assess student learning \n"
           student_description: ''
         grade5-maker-2024:
           lessons: {}
@@ -16919,7 +16917,7 @@ en:
           title: Grade 5 - Maker with micro:bit
           description_audience: ''
           description_short: ''
-          description: ''
+          description: "Bring hands-on technology learning to Computer Science with our Maker course, designed around the micro:bit physical computing device. This course bridges the gap between digital and physical worlds, enabling students to transfer their computer programs into real-world applications with the micro:bit. Students will learn fundamental coding principles such as sequencing, loops, conditional logic, and event handling, and they will gain practical experience in how hardware and software can work together.\n\nNot sure where to begin? Start with the first micro:bit project pathway and work your way through all three pathways, ordered by increasing difficulty. Each of the three pathways has two components. First, students will develop their coding knowledge by completing skill-building lessons from Code.org’s CS Fundamentals course. Then, students will go to the micro:bit platform to code their physical computing projects.\n\n**New to micro:bit?** \n\nGet started with our [self-paced Professional Learning](https://studio.code.org/courses/microbitmakermodule-2024). \n\nThis self-paced course covers the following topics: \n- How to use the Code.org curriculum \n- How to setup a classroom on Code.org \n- How to use micro:bits \n- How to use the “Meet your micro:bit” project\n- How to setup a classroom on micro:bit\n- How to assess student learning \n"
           student_description: ''
         k5-ai-data-2024:
           lessons:
@@ -16932,7 +16930,12 @@ en:
           title: How AI Makes Decisions
           description_audience: ''
           description_short: ''
-          description: ''
+          description: |-
+            Dive into the exciting world of artificial intelligence with Code.org’s innovative module, “How AI Makes Decisions,” tailored for upper elementary school students! This module is named to highlight its focus on unraveling the processes that AI systems use to analyze training data and make decisions. In these five lessons, AI concepts are broken down into engaging, age-appropriate lessons that focus on the critical role of data. Students will use Code.org’s AI tools for fun, educational AI experiences while gaining insight into how AI works behind the scenes. Each lesson provides several opportunities for class discussions about AI, bias, and the impact of AI tools on daily life.
+
+            **New to teaching AI?**
+
+            Get started with our [self-paced Professional Learning](studio.code.org/courses/elementaryai-2024).
           student_description: ''
         music-tutorial-2024:
           lessons:
@@ -17942,3 +17945,14 @@ en:
           description_short: ''
           description: "**You will:**\n\n* Get an introduction to Code.org’s mission. \n* Learn how to navigate the Code.org website and teacher tools.\n* Set up a classroom section.\n* Locate and use course lesson plans and teacher resources.\n* Learn how to access support while teaching Code.org curricula.\n\n**Suggested time:** 80 minutes"
           student_description: "**You will:**\n\n* Get an introduction to Code.org’s mission. \n* Learn how to navigate the Code.org website and teacher tools.\n* Set up a classroom section.\n* Locate and use course lesson plans and teacher resources.\n* Learn how to access support while teaching Code.org curricula.\n\n**Suggested time:** 80 minutes"
+        data-science-sample:
+          lessons:
+            lesson-1:
+              name: Data Science
+          lesson_groups: {}
+          name: data-science-sample
+          title: Data Science Sample
+          description_audience: ''
+          description_short: Sample progression for data science
+          description: ''
+          student_description: ''
