--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -471,9 +471,14 @@
   aria_label_call_to_action_teaching_the_design_process: "Start the Teaching The Design Process professional learning program"
   aria_label_call_to_action_teaching_csc: "Start the Teaching Computer Science Connections professional learning program"
   aria_label_call_to_action_teaching_ai: "Start the Teaching AI and Machine Learning professional learning program"
+  aria_label_call_to_action_teaching_how_ai_make_decisions: "Start the Teaching How AI Makes Decisions professional learning program"
   aria_label_call_to_action_teaching_maker_cp: "Start the Teaching Creating Apps with Devices (Circuit Playground) professional learning program"
   aria_label_call_to_action_teaching_maker_microbit: "Start the Teaching Creating Apps with Devices (micro:bit) professional learning program"
+  aria_label_call_to_action_teaching_microbit_maker_module: "Start the Teaching micro:bit Maker Module professional learning program"
   aria_label_call_to_action_teaching_web_development: "Start the Teaching Web Development professional learning program"
+  aria_label_call_to_action_teaching_elementary_game_design: "Start the Teaching Elementary Game Design professional learning program"
+  aria_label_call_to_action_teaching_coding_with_ai: "Start the Teaching Coding with AI professional learning program"
+  aria_label_call_to_action_teaching_computer_vision: "Start the Teaching Computer Vision professional learning program"
   aria_label_call_to_action_curriculum_csf: "Explore the Computer Science Fundamentals curriculum"
   aria_label_call_to_action_curriculum_csf_express: "Explore the Computer Science Fundamentals Express course"
   aria_label_call_to_action_curriculum_csf_express_pre_reader: "Explore the Computer Science Fundamentals Pre-Reader Express course"
@@ -483,14 +488,19 @@
   aria_label_call_to_action_curriculum_csc: "Explore the Computer Science Connections curriculum"
   aria_label_call_to_action_curriculum_ai: "Explore the AI and Machine Learning curriculum"
   aria_label_call_to_action_curriculum_ai_101: "Explore our AI curriculum offerings"
+  aria_label_call_to_action_curriculum_how_ai_makes_decisions: "Explore the How AI Makes Decisions curriculum"
   aria_label_call_to_action_curriculum_maker_cp: "Explore the Creating Apps with Devices (Circuit Playground) curriculum"
   aria_label_call_to_action_curriculum_maker_microbit: "Explore the Creating Apps with Devices (micro:bit) curriculum"
+  aria_label_call_to_action_curriculum_microbit_maker_module: "Explore the micro:bit Maker curriculum"
   aria_label_call_to_action_curriculum_creating_apps_with_devices: "Explore the Creating Apps with Devices unit"
   aria_label_call_to_action_curriculum_problem_solving_computing: "Explore the Problem Solving and Computing unit"
   aria_label_call_to_action_curriculum_web_development: "Explore the Web Development unit"
   aria_label_call_to_action_curriculum_interactive_animations_games: "Explore the Interactive Animations and Games unit"
   aria_label_call_to_action_curriculum_design_process: "Explore the Design Process unit"
   aria_label_call_to_action_curriculum_data_society: "Explore the Data and Society unit"
+  aria_label_call_to_action_curriculum_elementary_game_design: "Explore the Elementary Game Design unit"
+  aria_label_call_to_action_curriculum_coding_with_ai: "Explore the Coding with AI unit"
+  aria_label_call_to_action_curriculum_computer_vision: "Explore the Computer Vision unit"
   aria_label_call_to_action_collection_hardware: "Explore the Hardware collection"
   aria_label_call_to_action_collection_design_purpose: "Explore the Design with Purpose collection"
   aria_label_call_to_action_collection_impact_society: "Explore the Impact in Society collection"
@@ -584,6 +594,7 @@
   curriculum_name_maker: "Maker"
   curriculum_name_maker_cp: "Creating Apps with Devices (Circuit Playground)"
   curriculum_name_maker_microbit: "Creating Apps with Devices (micro:bit)"
+  curriculum_name_microbit_maker_modules: "micro:bit Maker modules" 
   curriculum_name_creating_apps_with_devices: "Creating Apps with Devices"
   curriculum_name_poetry: "Coding with Poetry"
   curriculum_name_dance_party: "Dance Party"
@@ -598,6 +609,10 @@
   curriculum_name_design_process: "The Design Process"
   curriculum_name_data_society: "Data & Society"
   curriculum_name_data_and_society: "Data and Society"
+  curriculum_name_how_ai_makes_decisions: "How AI Makes Decisions"
+  curriculum_name_elementary_game_design: "Elementary Game Design"
+  curriculum_name_coding_with_ai: "Coding with AI"
+  curriculum_name_computer_vision: "Computer Vision"
   curriculum_desc_dance_party_01: "In this introductory activity, use code to make a variety of colorful characters bust a move to animated backgrounds and upbeat music."
   curriculum_desc_dance_party_02: "Go beyond the introductory tutorial with extended project ideas. Browse a library of examples of more complex dance parties."
   curriculum_desc_dance_party_unplugged: "Get your groove on—no computer needed! Learn how coding concepts, like events, can be used to synchronize dancer choreography."
@@ -702,7 +717,10 @@
   module_professional_learning: "Professional learning"
   module_grade_k_12_teachers: "K-12 Teachers"
   module_grade_k_5_teachers: "K-5 Teachers"
+  module_grade_2_5_teachers: "2-5 Teachers"
+  module_grade_3_5_teachers: "3-5 Teachers"
   module_grade_6_10_teachers: "6-10 Teachers"
+  module_grade_6_12_teachers: "6-12 Teachers" 
   module_grade_9_12_teachers: "9-12 Teachers"
   module_level_beginner: "Beginner"
   module_level_intermediate: "Intermediate"
@@ -710,6 +728,7 @@
   module_duration_45_mins: "45 minutes"
   module_duration_2_weeks: "2 weeks"
   module_duration_1_hr: "1 hour"
+  module_duration_1_hr_30_minutes: "1.5 hours"
   module_duration_2_hrs: "2 hours"
   module_duration_2_hrs_30_minutes: "2.5 hours"
   module_duration_3_hrs: "3 hours"
@@ -740,11 +759,16 @@
   module_label_teaching_animations: "Interactive Animations and Games"
   module_label_teaching_csc: "Teaching Computer Science Connections"
   module_label_teaching_ai: "Teaching AI and Machine Learning"
+  module_label_teaching_coding_with_ai: "Teaching Coding with AI"
   module_label_teaching_maker_cp: "Teaching Creating Apps with Devices (Circuit Playground)"
   module_label_teaching_maker_microbit: "Teaching Creating Apps with Devices (micro:bit)"
+  module_label_teaching_microbit_maker_module: "Teaching micro:bit Maker Module"
   module_label_teaching_design_process: "Teaching The Design Process"
+  module_label_teaching_how_ai_makes_decisions: "Teaching How AI Makes Decisions"
+  module_label_teaching_elementary_game_design: "Teaching Elementary Game Design"
   module_label_teaching_k5_basics: "Computer Science Basics for K-5 Teachers"
   module_label_teaching_web_development: "Teaching Web Development"
+  module_label_teaching_computer_vision: "Teaching Computer Vision"
   module_subject_english_language_arts: "English Language Arts"
   module_subject_interdisciplinary: "Interdisciplinary"
   module_subject_social_studies: "Social Studies"
