--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -10976,22 +10976,22 @@
       heading: "Why teach computer vision?"
       desc: "Empower students to solve real-world challenges, foster innovation, and explore AI's ethical implications in visual data."
       real_world:
-        heading: "Real-world applications"
+        title: "Real-world applications"
         desc: "Empower students to solve real-world problems by understanding how AI interprets visual data, from healthcare diagnostics to autonomous vehicles."
       innovative:
-        heading: "Innovative thinking"
+        title: "Innovative thinking"
         desc: "Foster innovative thinking by engaging students with cutting-edge technology, encouraging them to develop creative solutions, and explore new possibilities."
       ethical:
-        heading: "Ethical awareness"
+        title: "Ethical awareness"
         desc: "Teach students to critically assess the ethical implications of AI, promoting responsible and thoughtful application of computer vision technologies."
       button:
         explore_curriculum: "Explore curriculum"
-        see_professional_learning: "See professional learning"
+        see_pl: "See professional learning"
     resources:
       heading: "Resources to support you every step of the way"
       desc: "Get access to materials that will help you teach computer science with confidence — even without prior CS teaching experience — when you create a **free** Code.org account."
       button: "Create a free account"
-    get_started:
+    curricula:
       heading: "Get started with computer vision"
       computer_vision:
         overline: "Grades 9-12"
