--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1548,8 +1548,8 @@
   "lockFollowing": "Lock the following lessons that are currently unlocked:",
   "lockAssessment": "Lock assessment",
   "lockAssessmentLong": "Lock assessment when students finish using the \"Lock Settings\" button.",
-  "lockoutManageLinkedAccountsPrompt": "Our records indicate that your account requires parental permission to use a personal login and password. Please supply your parent's details below.",
-  "lockoutManageLinkedAccountsHeader": "Edit Personal Login Parent Permission",
+  "lockoutManageLinkedAccountsPrompt": "Our records indicate that your account requires parent or guardian permission to use a personal login and password. Please supply your parent or guardian's details below.",
+  "lockoutManageLinkedAccountsHeader": "Parent or Guardian Permission",
   "lockSettings": "Lock Settings",
   "lockStage": "Lock lesson",
   "lockStageInstructions": "Once time is up, \"Lock lesson\" to hide questions.",
