--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -136,6 +136,7 @@
   "aiWarningModalMessagesAreRecorded": "All messages you send are recorded.",
   "aiWarningModalPersonalNotSubmitted": "In order to protect your privacy, anything considered personal information (name, phone number, address, etc.) should not be submitted.",
   "aiWarningModalOk": "Start chatting",
+  "aiChatBotIconAlt": "An icon depicting a robot",
   "aiChatInappropriateUserMessage": "This message has been flagged as inappropriate.",
   "aiChatTooPersonalUserMessage": "This message has been flagged as too personal.",
   "aiChatResponseError": "There was an error getting a response. Please try again.",
