--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -1139,6 +1139,9 @@
   "enterYourAnswerHere": "Enter your answer here",
   "enterYourName": "Enter Your Name",
   "enterYourSchoolZip": "Enter your school's zip code:",
+  "enrollmentCelebrationTitle": "You've been enrolled!",
+  "enrollmentCelebrationBody": "You've successfully been enrolled for {workshopName}. You can see the workshop and additional information in your professional learning center.",
+  "enrollmentCelebrationCallToAction": "Go to my professional learning",
   "enrollmentDescription": "Join your teacher's classroom by entering their section code below. Teachers will be able to see your course progress, projects, and reset your password in case you forget it.",
   "equalTo": "Equal to",
   "errorDeleting": "Error deleting file.",
