add donate string to en.yml

--- a/dashboard/config/locales/en.yml
+++ b/dashboard/config/locales/en.yml
@@ -418,6 +418,7 @@ en:
       learn: "Learn"
       stats: "Stats"
       help_us: "Help Us"
+      donate: "Donate"
       teach: "Teach"
       about: "About"
       incubator: "Incubator"
