Use double quotes

--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -11471,8 +11471,8 @@
     label_what_you_can_make: "What you can make:"
     label_experience: "Experience:"
     spritelab:
-      overline: 'Ages 5-12'
-      title: 'Sprite Lab'
+      overline: "Ages 5-12"
+      title: "Sprite Lab"
       what_you_can_make: "Simple animations and games with characters"
       experience: "Beginner"
       call_to_action_learn_more: "Learn more"
@@ -11494,10 +11494,10 @@
  
   resources_tabs:
     progress:
-      tab_label: 'Progress'
+      tab_label: "Progress"
       heading: "Track your students' progress"
       desc: "Our powerful progress view helps you monitor student work by providing insights into completion status, time spent, and more. Easily track each student's learning journey, quickly assess participation, and give personalized feedback."
-      call_to_action: 'Create a Code.org account'
+      call_to_action: "Create a Code.org account"
 
   language_code:
     ar: "Arabic"
